--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "voxel-perlin-terrain": "~1.0.0",
     "voxel-forest": "0.0.1",
     "voxel-walk": "0.0.5",
-    "voxel-highlight": "0.0.9"
+    "voxel-highlight": "0.0.9",
+    "voxel-sky": "~0.2.0"
   }
 }
