--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "voxel-perlin-terrain": "~1.0.0",
     "voxel-walk": "0.0.5",
     "voxel-highlight": "0.0.9",
-    "voxel-sky": "~0.2.0"
+    "voxel-sky": "~0.2.0",
+    "voxel-snow": "~0.2.0",
+    "voxel-simplex-terrain": "0.0.3",
+    "voxel-forest": "0.0.1"
   }
 }
